fixed center aligning for login logo. added dropdown select for area zones

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,8 @@
 
+#login-nav-logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+}
+
